<resources>
    <string name="app_name">pratiseandroid</string>
    <string name="student_details">Student Details</string>
    <string name="toast">Toast</string>
    <string name="snack_bar">snack bar</string>
    <string name="alert_dialog">alert dialog</string>
    <string name="dialog">Dialog</string>
    <string name="add_data">add data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_kotlin_class">Hello Kotlin Class</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">purple</string>
    <string name="name">Name</string>
    <string name="_123">123</string>
    <string name="_1234567890">1234567890</string>
</resources>