<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".AlertMessagesActivity">
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_above="@id/btnToast"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast"
        android:layout_centerInParent="true"
        android:id="@+id/btnToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snack_bar"
        android:layout_below="@id/btnToast"
        android:layout_centerInParent="true"
        android:id="@+id/btnSnack"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog"
        android:layout_below="@id/btnSnack"
        android:layout_centerInParent="true"
        android:id="@+id/btnAlert"/>
    <TextView
        android:id="@+id/tvInteger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="18sp"
        android:layout_below="@id/btnAlert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog"
        android:layout_below="@id/btnAlert"
        android:layout_centerInParent="true"
        android:id="@+id/btnDialog"/>
</RelativeLayout>